<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessibility_disclosure_title"
        android:textAppearance="@style/TextAppearance.BBetter.Headline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/accessibility_disclosure_body"
        android:textAppearance="@style/TextAppearance.BBetter.Body" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/accessibility_disclosure_steps_title"
        android:textAppearance="@style/TextAppearance.BBetter.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/accessibility_disclosure_steps"
        android:textAppearance="@style/TextAppearance.BBetter.Body"
        android:textColor="@color/bb_on_surface_muted" />

    <TextView
        android:id="@+id/accessibility_disclosure_privacy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="@dimen/spacing_sm"
        android:paddingBottom="@dimen/spacing_sm"
        android:text="@string/privacy_policy_label"
        android:textAppearance="@style/TextAppearance.BBetter.Body"
        android:textColor="@color/bb_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accessibility_disclosure_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_sm"
            android:text="@string/accessibility_disclosure_cancel"
            android:textAppearance="@style/TextAppearance.BBetter.Title"
            android:textColor="@color/bb_on_surface_muted" />

        <TextView
            android:id="@+id/accessibility_disclosure_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_sm"
            android:text="@string/accessibility_disclosure_continue"
            android:textAppearance="@style/TextAppearance.BBetter.Title"
            android:textColor="@color/bb_primary" />
    </LinearLayout>

</LinearLayout>
