<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bbettercalendar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.bbettercalendar.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_calendar_month"
        android:name="com.example.bbettercalendar.ui.calendar.CalendarFragmentMonth"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar_month" >
        <action
            android:id="@+id/action_navigation_calendar_month_to_navigation_calendar_week"
            app:destination="@id/navigation_calendar_week" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar_week"
        android:name="com.example.bbettercalendar.ui.calendar.CalendarFragmentWeek"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar_week" >
        <action
            android:id="@+id/action_navigation_calendar_week_to_navigation_calendar_month"
            app:destination="@id/navigation_calendar_month" />
    </fragment>

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.bbettercalendar.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_navigation_projects_to_navigation_project_detail"
            app:destination="@id/navigation_project_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_project_detail"
        android:name="com.example.bbettercalendar.ui.projects.ProjectDetailFragment"
        android:label="@string/project_detail_title"
        tools:layout="@layout/fragment_project_detail" >
        <argument
            android:name="projectId"
            app:argType="integer" />
    </fragment>

</navigation>