<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/app_limit_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_limit_dialog_title"
        android:textAppearance="@style/TextAppearance.BBetter.Headline" />

    <TextView
        android:id="@+id/app_limit_dialog_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:textAppearance="@style/TextAppearance.BBetter.Body"
        android:textColor="@color/bb_on_surface_muted" />

    <EditText
        android:id="@+id/app_limit_dialog_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/app_limit_dialog_minutes_hint"
        android:inputType="number"
        android:maxLength="4"
        android:textAppearance="@style/TextAppearance.BBetter.Body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_limit_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_sm"
            android:text="@string/app_limit_dialog_cancel"
            android:textAppearance="@style/TextAppearance.BBetter.Title"
            android:textColor="@color/bb_on_surface_muted" />

        <TextView
            android:id="@+id/app_limit_dialog_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_sm"
            android:text="@string/app_limit_dialog_clear"
            android:textAppearance="@style/TextAppearance.BBetter.Title"
            android:textColor="@color/bb_danger" />

        <TextView
            android:id="@+id/app_limit_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/spacing_sm"
            android:text="@string/app_limit_dialog_save"
            android:textAppearance="@style/TextAppearance.BBetter.Title"
            android:textColor="@color/bb_primary" />
    </LinearLayout>

</LinearLayout>
